Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.2
-
None
-
d07ee1345acd8100fa5cbb7f05c0aaf5f87f4cae (qt/qtdeclarative/dev) ae9265cedde6cc3fc611269e362cc7a02efef773 (qt/qtdeclarative/6.2) 1a59ef4218658ffc476909ef4fca13d6cf86d04b (qt/qtquickcontrols2/6.1)
Description
After openingĀ a modal menu and closing it by clicking next to it, normal menus will not close themselves anymore when clicking outside of them.
See the attached example to reproduce